<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="293dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="470dp"
        android:text="@string/Name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Sign_up_Name"
        android:layout_width="303dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="293dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="410dp"
        android:text="@string/StudentId"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Sign_up_StudentID"
        android:layout_width="303dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="390dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="293dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="350dp"
        android:text="@string/Age"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Sign_up_Age"
        android:layout_width="303dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="293dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="290dp"
        android:text="@string/Email"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Sign_up_ID"

        android:layout_width="303dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="90dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="220dp"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="293dp"
        android:layout_height="15dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="220dp"
        android:text="@string/passwordText"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView"/>



    <EditText
        android:id="@+id/Sign_up_PW"
        android:layout_width="303dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="150dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="150dp"
        android:text="@string/passwordCheck"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/Sign_up_PW2"
        android:layout_width="303dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="52dp"
        android:onClick="SignupRequest"
        android:text="@string/Complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="52dp"
        android:onClick="BackButton"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="476dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/mainwhite" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="314dp"
        android:layout_height="42dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="492dp"
        android:text="@string/Prompt1"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>