<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Forum">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginBottom="620dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mainwhite" />

    <Button
        android:id="@+id/Home_btn"
        android:layout_width="55dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="@drawable/home2"
        android:onClick="onMove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Forum_btn"
        android:layout_width="55dp"
        android:layout_height="34dp"
        android:layout_marginStart="176dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="@drawable/forum2"
        android:onClick="onMove"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Setting_btn"
        android:layout_width="68dp"
        android:layout_height="35dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="@drawable/setting"
        android:onClick="onMove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="416dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <Button
            android:id="@+id/academy_forum_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#9DD7DF"
            android:onClick="MoveForum"
            android:text="@string/academics" />

        <Button
            android:id="@+id/internship_forum_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#CCE7AD"
            android:onClick="MoveForum"
            android:text="@string/internship" />

        <Button
            android:id="@+id/seminar_forum_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/textView"
            android:layout_weight="1"
            android:background="#F5C5D7"
            android:onClick="MoveForum"
            android:text="@string/seminar" />

        <Button
            android:id="@+id/cultural_forum_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/textView"
            android:layout_weight="1"
            android:background="#EDDAF0"
            android:onClick="MoveForum"
            android:text="@string/cultural" />

        <Button
            android:id="@+id/club_activity_forum_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/textView"
            android:layout_weight="1"
            android:background="#F7BDAC"
            android:onClick="MoveForum"
            android:text="@string/club_activities" />

        <Button
            android:id="@+id/news_forum_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/textView"
            android:layout_weight="1"
            android:background="#BCC2E4"
            android:onClick="MoveForum"
            android:text="@string/news" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>